# telegram-markdown-v2-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release.yml
src/: convert.rs  definitions.rs  errors.rs  lib.rs  types.rs  utils.rs
src/handlers/: blocks.rs  formatting.rs  links.rs  mod.rs  text.rs  utils.rs
tests/: convert.rs
tests/fixtures/: 002_escaped_text__keep.expected.md  002_escaped_text__keep.input.md  003_headings__keep.expected.md  003_headings__keep.input.md  004_bold__keep.input.md  005_bold_character_in_word__keep.expected.md  005_bold_character_in_word__keep.input.md  006_italic__keep.expected.md  006_italic__keep.input.md  007_bold_plus_italic__keep.expected.md  007_bold_plus_italic__keep.input.md  008_strike__keep.expected.md  008_strike__keep.input.md  009_unordered_list__keep.expected.md  009_unordered_list__keep.input.md  010_ordered_list__keep.expected.md  010_ordered_list__keep.input.md  011_link_with_title__keep.expected.md  011_link_with_title__keep.input.md  012_link_with_alt__keep.expected.md  012_link_with_alt__keep.input.md  013_link_with_alt_and_title__keep.expected.md  013_link_with_alt_and_title__keep.input.md  014_link_with_no_alt_nor_title__keep.expected.md  014_link_with_no_alt_nor_title__keep.input.md  015_link_with_invalid_url__keep.input.md  016_link_with_parentheses__keep.expected.md  016_link_with_parentheses__keep.input.md  017_link_in_reference_style_with_alt__keep.input.md  018_link_in_reference_style_with_alt_and_custom_label__keep.input.md  (+92 more)
