[package]
name = "telegram-markdown-v2"
version = "0.1.0"
edition = "2024"
description = "Transform regular Markdown into Telegram MarkdownV2 (parse_mode = MarkdownV2)."
readme = "README.md"
license = "MIT"
repository = "https://github.com/vinicius73/telegram-markdown-v2-rs"
homepage = "https://github.com/vinicius73/telegram-markdown-v2-rs"
documentation = "https://docs.rs/telegram-markdown-v2"

exclude = [".github/*", "tests/*", "justfile"]

[lib]
name = "telegram_markdown_v2"

[dependencies]
markdown = "1"
regex = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
rstest = "0.26.1"
